kubernetes/07-frontend.yaml
---
# Frontend (Nginx) - Blue/Green Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: cloud-summit
  labels:
    app: frontend
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: blue
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      containers:
        - name: frontend
          image: 516962256649.dkr.ecr.ap-south-1.amazonaws.com/frontend:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "30m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet: { path: /health, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 15

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: cloud-summit
  labels:
    app: frontend
    version: green
spec:
  replicas: 0
  selector:
    matchLabels:
      app: frontend
      version: green
  template:
    metadata:
      labels:
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: 516962256649.dkr.ecr.ap-south-1.amazonaws.com/frontend:green
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "30m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet: { path: /health, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloud-summit
  labels:
    app: frontend
spec:
  selector:
    app: frontend
    version: blue
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
